--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DecorHome</title>
-    <link rel="stylesheet" href="css/styles.css">    
+    <link rel="stylesheet" href="styles.css">    
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Teko:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
@@ -96,7 +96,7 @@
     </section>
     <section id="detalhes">
         <div class="detalhe" id="detalhe-1">
-            <img src="img/d.webp" alt="Quarto moderno">
+            <img src="d.webp" alt="Quarto moderno">
             <div class="detalhe-descriçao">
             <h3>Você irá aprender sobre a decoração de diversos ambientes</h3>
             </div>
@@ -113,10 +113,10 @@
                 <li>Trends</li>
             </ul>
             </div>
-            <img src="img/e.jpg" alt="Cozinha moderna">
+            <img src="e.jpg" alt="Cozinha moderna">
         </div>
         <div class="detalhe" id="detalhe-3">
-            <img src="img/g.jpg" alt="Área externa moderna">
+            <img src="g.jpg" alt="Área externa moderna">
             <div class="detalhe-descriçao">
             <h3>Objetos</h3>
             <ul>
